--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/lgfahys/LIRI-Bot/issues"
   },
-  "homepage": "https://github.com/lgfahys/LIRI-Bot#readme"
+  "homepage": "https://github.com/lgfahys/LIRI-Bot#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
+    "node-spotify-api": "^1.0.7"
+  }
 }
